Wrap publish task config in afterEvaluate
Since a task may be added to its container before being initialized,
we need to postpone configuring it.

Fixes #2.